tdf#119202 Qt5 set WM_CLASS for top level windows

Uses the same naming then the gtk3 backend, i.e. "libreoffice"
for the instance name an different class names for the module
windows, like "libreoffice-writer".

As a consquence the Qt5X11Extras and XCB dependencies move from
the KF5 detection to Qt5.

Change-Id: Ic9b8890536f6413ab59d2e0da866e2280ab3181a